compiler/src/test/resources/amyc/parser/failing/ValInVal.amy
module Val
  val x: Int = val y: Int = 10; 5; 42
end Val
